# chip-8-console-fpga

./: .editorconfig  .gitattributes  .gitignore  .lychee.toml  .markdownlint.yml  .svlint.toml  .typos.toml  .yamllint.yml  Makefile  README.md  REUSE.toml  files.f
.github/workflows/: actionlint.yml  board-synth-weekly.yml  coverage-nightly.yml  formal-nightly.yml  lychee.yml  markdown-lint.yml  release-signoff.yml  reuse.yml  rust-check.yml  rust-clippy.yml  rust-doc.yml  rust-engine.yml  rust-fmt.yml  rust-release.yml  rust-test.yml  shell-format.yml  shellcheck.yml  svlint.yml  toml-lint.yml  typos.yml  validation-report.yml  verilator-core.yml  verilator-pr.yml  verilator-soc.yml  yaml-lint.yml  yosys-core.yml  yosys-soc-axi.yml  yosys-tang-nano-9k.yml
constraints/gowin/: tang_nano_9k_template.cst
constraints/intel/: cyclone_v_top.sdc
constraints/xilinx/: artix_a7_top.xdc
docs/: ARCHITECTURE.md  BLOCKS.md  ISA.md  REG.md  TECHNICAL_NOTES.md  VERIFICATION.md
rtl/soc/: chip8_axi_soc.sv  chip8_native_soc.sv
scripts/board/: board_smoke.sh  board_smoke_tang_nano_9k.sh
scripts/ci/: install_cargo_cli.sh  install_verilator.sh
scripts/maintenance/: clean.sh
scripts/programming/: chip8_usb_dap.sh
scripts/quality/: check_conf.sh  (+2 more)
validation/rust/: Cargo.toml  rustfmt.toml
validation/rust/.cargo/: config.toml  nightly-aggressive.toml
validation/rust/chip8-model/: Cargo.toml
validation/rust/chip8-model/src/: constants.rs  ffi.rs  lib.rs  main.rs  microarchitecture.rs  model.rs  reference.rs  rom.rs  stress.rs  validation.rs  video_pipeline.rs
(+190 files in other folders)
