# SPDX-FileCopyrightText: 2026 Rafael V. Volkmer <rafael.v.volkmer@gmail.com>
# SPDX-License-Identifier: GPL-3.0-only

[workspace]
members = ["chip8-model"]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
